2000-04-18  Charles 'Buck' Krasic  <krasic@acm.org>

	* Version 0.1 - first release at libdv.sourceforge.net
