@@ -27,6 +27,6 @@
 #ifndef __DV_YCRCB_TO_RGB32_H__
 #define __DV_YCRCB_TO_RGB32_H__
 
-void dv_ycrcb_to_rgb32(gint8 *y_frame, gint8 *cr_frame, gint8 *cb_frame, guint8 *rgb_frame);
+void dv_ycrcb_to_rgb32(gint8 *y_frame, gint8 *cr_frame, gint8 *cb_frame, guint8 *rgb_frame,gint height);
 
 #endif // __DV_YCRCB_TO_RGB32_H__
