@@ -2,3 +2,9 @@
 
 	* Version 0.1 - first release at libdv.sourceforge.net
 
+2000-04-19  Erik Walthinnsen (Omega)  <omega@cse.ogi.edu>
+
+	* Added rudimentary PAL decoding, as well as a way todifferentiate
+	  between IEC61834 and SMPTE314M video, which is critical for
+	  dealing with PAL data.
+
